@@ -1,5 +1,12 @@
 2008-02-05  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (game_new_cb), (game_join_cb), (game_pause_cb),
+	(application_quit_cb), (ui_main_new): use extra callbacks for Maemo;
+	these take GtkAction* and UiMain* arguments for the upcoming
+	GtkUiManager based menubar
+
+2008-02-05  Sven Herzberg  <sven@imendio.com>
+
 	* src/ui/ui-main.c: (new_1_player_game), (quit_program),
 	(pause_game), (new_network_game): simplified some callbacks for
 	upcoming changes
